Fixed background / hero tube / backoffice responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
     </div>
 
     <div class="background">
-      <img src="assets/img/Background-figure.svg" alt="" />
     </div>
 
     <div class="whatsapp">
@@ -494,10 +493,10 @@
         slideBy: "page",
         controls: false,
         navPosition: "bottom",
-        loop: false,
+        loop: true,
         controlsContainer: ".backoffice-slider-buttons",
         responsive: {
-          1280: {
+          750: {
             controls: true,
           },
         },
