finished register layout

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
           id="register-btn"
           >Registrá tu establecimiento</a
         >
+        <a
+          href="/register.html"
+          target="blank"
+          class="btn btn--sm btn--outlined btn--inverted"
+          id="register-btn-750"
+          >Registrá tu establecimiento</a
+        >
         <div id="header-hr"></div>
         <a href="#" class="btn btn--sm" id="signin-btn">Ingresar</a>
       </div>
@@ -524,8 +531,8 @@
         mode: "gallery",
         navPosition: "bottom",
         gutter: 30,
-        animateIn: "animate__fadeInRight",
-        animateOut: "animate__fadeOut",
+        /* animateIn: "animate__fadeInRight",
+        animateOut: "animate__fadeOut", */
         controlsContainer: ".features-slider-1280-buttons",
         responsive: {
           1030: {
