WIP animations / fixed bug validator

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         >
         <a
           href="/register.html"
-          target="blank"
+          target="_blank"
           class="btn btn--sm btn--outlined btn--inverted"
           id="register-btn-750"
           >Registrá tu establecimiento</a
@@ -68,6 +68,9 @@
     </div>
 
     <div class="background">
+    </div>
+
+    <div class="background2">
     </div>
 
     <div class="whatsapp">
