fixed bugs and added animations

--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
       <section class="testimonials">
         <div class="testimonials-head container-xs text--center flow-content">
           <h3>
-            Sé parte de los establecimientos que <br class="br--750" />ya se
-            digitalizaron junto a Vica.<br class="br--750" />
+            Sé parte de los establecimientos que <br class="br--m" />ya se
+            digitalizaron junto a Vica.<br class="br--m" />
             <span class="text--orange">¡Sumate vos también!</span>
           </h3>
           <a href="#" class="btn btn--block">Registrá tu establecimiento</a>
@@ -477,7 +477,7 @@
         <div class="footer-vertical-hr"></div>
         <div id="footer-horizontal-hr"></div>
         <p class="text-caption">
-          Copyright © 2020 VICA S.A. <br class="br--750" />
+          Copyright © 2020 VICA S.A. <br class="br--s" />
           Todos los derechos reservados.
         </p>
       </div>
