Added loading logo

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
   <body>
     <div class="loading">
-      <h3 class="animate__animated animate__flash">
-        Cargando...
-      </h3>
+      <svg id="loading-logo-svg" class="animate__animated animate__pulse animate__infinite">
+        <use xlink:href="assets/img/iconos.svg#logo-v"></use>
+      </svg>
     </div>
 
     <header>
@@ -88,7 +88,7 @@
           </h1>
           <p class="text-body-1">
             VICA te permite administrar los pedidos y pagos en mesa y take away,
-            <br class="br--1280">brindando la mejor experiencia de compra en tu establecimiento.
+            <br class="br--xl">brindando la mejor experiencia de compra en tu establecimiento.
           </p>
           <a href="#" class="btn btn--l btn--filled">Comenzar gratis ahora</a>
         </div>
