--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
 
     <main class="register-main">
         <div class="register-form-header flow-content flow-content--s">
-            <svg id="logo-register-svg">
+            <svg class="logo-register-svg">
                 <use xlink:href="assets/img/iconos.svg#logo"></use>
             </svg>
             <h3>¡Comenzá tu registro acá!</h3>
