first approach to cellphone slider

--- a/index.html
+++ b/index.html
@@ -151,24 +151,27 @@
       </section>
 
       <section class="features split split--l">
-        <div class="features-image text--center">
-          <img
-            src="assets/img/CellphoneMobile.png"
-            id="cellphone-mobile-img"
-            alt="Interfaz de la aplicación VICA"
-          />
-          <img
-            src="assets/img/Cellphone1280.png"
-            id="cellphone-1280-img"
-            alt="Interfaz de la aplicación VICA"
-          />
-          <div class="indicator" id="interfaz-indicator">
-            <a href="#interfaz-1"></a>
-            <a href="#interfaz-2"></a>
-            <a href="#interfaz-3"></a>
-            <a href="#interfaz-4"></a>
-          </div>
-        </div>
+        <div class="features-img">
+          <!-- <div class="cellphone-slider-container">
+            <div class="cellphone-slides-container">
+              <div class="cellphone-slider">
+                <div class="cellphone-slide" id="cellphone-1">
+                  <img src="assets/img/cellphone-1.jpg" />
+                </div>
+                <div class="cellphone-slide" id="cellphone-2">
+                    <img src="assets/img/cellphone-1.jpg" />
+                </div>
+                <div class="cellphone-slide" id="cellphone-3">
+                    <img src="assets/img/cellphone-1.jpg" />
+                </div>
+                <div class="cellphone-slide" id="cellphone-4">
+                    <img src="assets/img/cellphone-1.jpg" />
+                </div>
+              </div>
+            </div>
+          </div> -->
+          <div class="cellphone-mobile-img"></div>
+        </div> 
         <div class="features-content flow-content">
           <div class="features-content-text container-xs flow-content">
             <h2>¿Qué tiene VICA para vos?</h2>
@@ -193,7 +196,7 @@
             <div>
               <div class="feature" id="feature-2">
                 <svg id="menu-digital-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#menu-digital"></use>
                 </svg>
                 <h6>Menú digital</h6>
                 <p class="text-body-2">
@@ -207,7 +210,7 @@
             <div>
               <div class="feature" id="feature-3">
                 <svg id="pagos-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#pagos"></use>
                 </svg>
                 <h6>Pagos online</h6>
                 <p class="text-body-2">
@@ -220,7 +223,7 @@
             <div>
               <div class="feature" id="feature-4">
                 <svg id="menu-visible-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#menu-visible"></use>
                 </svg>
                 <h6>Menú siempre visible</h6>
                 <p class="text-body-2">
@@ -234,7 +237,7 @@
             <div>
               <div class="feature" id="feature-5">
                 <svg id="soporte-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#soporte"></use>
                 </svg>
                 <h6>Soporte las 24hs.</h6>
                 <p class="text-body-2">
@@ -247,7 +250,7 @@
             <div>
               <div class="feature" id="feature-6">
                 <svg id="incremento-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#incremento"></use>
                 </svg>
                 <h6>Incremento de tus ventas</h6>
                 <p class="text-body-2">
@@ -259,7 +262,7 @@
             <div>
               <div class="feature" id="feature-7">
                 <svg id="fidelizacion-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#fidelizacion"></use>
                 </svg>
                 <h6>Fidelización con tu cliente</h6>
                 <p class="text-body-2">
@@ -272,7 +275,7 @@
             <div>
               <div class="feature" id="feature-8">
                 <svg id="tiempos-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#tiempos"></use>
                 </svg>
                 <h6>Optimizamos tus tiempos</h6>
                 <p class="text-body-2">
@@ -297,7 +300,7 @@
             <div>
               <div class="feature" id="feature-2">
                 <svg id="menu-digital-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#menu-digital"></use>
                 </svg>
                 <h6>Menú digital</h6>
                 <p class="text-body-2">
@@ -311,7 +314,7 @@
             <div>
               <div class="feature" id="feature-3">
                 <svg id="pagos-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#pagos"></use>
                 </svg>
                 <h6>Pagos online</h6>
                 <p class="text-body-2">
@@ -324,7 +327,7 @@
             <div>
               <div class="feature" id="feature-4">
                 <svg id="menu-visible-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#menu-visible"></use>
                 </svg>
                 <h6>Menú siempre visible</h6>
                 <p class="text-body-2">
@@ -338,7 +341,7 @@
             <div>
               <div class="feature" id="feature-5">
                 <svg id="soporte-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#soporte"></use>
                 </svg>
                 <h6>Soporte las 24hs.</h6>
                 <p class="text-body-2">
@@ -351,7 +354,7 @@
             <div>
               <div class="feature" id="feature-6">
                 <svg id="incremento-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#incremento"></use>
                 </svg>
                 <h6>Incremento de tus ventas</h6>
                 <p class="text-body-2">
@@ -363,7 +366,7 @@
             <div>
               <div class="feature" id="feature-7">
                 <svg id="fidelizacion-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#fidelizacion"></use>
                 </svg>
                 <h6>Fidelización con tu cliente</h6>
                 <p class="text-body-2">
@@ -376,7 +379,7 @@
             <div>
               <div class="feature" id="feature-8">
                 <svg id="tiempos-svg">
-                  <use xlink:href="assets/img/iconos.svg#gestion"></use>
+                  <use xlink:href="assets/img/iconos.svg#tiempos"></use>
                 </svg>
                 <h6>Optimizamos tus tiempos</h6>
                 <p class="text-body-2">
@@ -594,6 +597,25 @@
           }
         }
       });
+
+      var cellphoneSlider = tns({
+        container: ".cellphone-slider",
+        items: 1,
+        slideBy: "page",
+        controls: false,
+        navPosition: "bottom",
+        loop: true,
+        autoplay: true,
+        autoplayTimeout: 3000,
+        autoplayHoverPause: true,
+        autoplayButtonOutput: false,
+        responsive: {
+          750: {
+            nav: false,
+          },
+        },
+      });
+
     </script>
 
 <!-- AOS -->
