--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
     <div class="background2">
     </div>
 
+    <div class="background3">
+    </div>
+
     <div class="whatsapp">
       <svg id="whatsapp-svg">
         <use xlink:href="assets/img/iconos.svg#whatsapp"></use>
