Fixed cellphone on desktop

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
               <use xlink:href="assets/img/iconos.svg#arrow-outline"></use>
             </svg>
             <svg id="arrow-next-svg">
-              <use xlink:href="assets/img/iconos.svg#arrow-outline"></use>
+              <use xlink:href="assets/img/iconos.svg#arrow-filled"></use>
             </svg>
           </div>
         </div>
