changed color of next arrows

--- a/index.html
+++ b/index.html
@@ -390,10 +390,10 @@
             </div>
           </div>
           <div class="features-slider-1280-buttons">
-            <svg id="arrow-prev-svg">
+            <svg class="arrow-prev-svg">
               <use xlink:href="assets/img/iconos.svg#arrow-outline"></use>
             </svg>
-            <svg id="arrow-next-svg">
+            <svg class="arrow-next-svg">
               <use xlink:href="assets/img/iconos.svg#arrow-filled"></use>
             </svg>
           </div>
@@ -427,8 +427,8 @@
             <svg id="backoffice-prev-svg">
               <use xlink:href="assets/img/iconos.svg#arrow-outline"></use>
             </svg>
-            <svg id="backoffice-next-svg">
-              <use xlink:href="assets/img/iconos.svg#arrow-outline"></use>
+            <svg class="arrow-next-svg">
+              <use xlink:href="assets/img/iconos.svg#arrow-filled"></use>
             </svg>
           </div>
         </div>
