--- a/register.html
+++ b/register.html
@@ -21,9 +21,11 @@
 
     <main class="register-main">
         <div class="register-form-header flow-content flow-content--s">
-            <svg class="logo-register-svg">
-                <use xlink:href="assets/img/iconos.svg#logo"></use>
-            </svg>
+            <a href="/index.html">
+                <svg class="logo-register-svg" >
+                    <use xlink:href="assets/img/iconos.svg#logo"></use>
+                </svg>
+            </a>
             <h3>¡Comenzá tu registro acá!</h3>
             <p class="text-body-1">
                 Te pedimos que completes los siguientes datos <br>sobre el
